update * add givebutter modal * stop clock flicker on pageload * update icon * move position fetch to action

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -51,6 +51,11 @@
     --theme-bg: var(--color-sand);
 }
 
+html,
+body {
+    height: 100%;
+}
+
 body {
     font-family: var(--font-serif), -apple-system, BlinkMacSystemFont,
         'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
