--- a/src/components/text.module.css
+++ b/src/components/text.module.css
@@ -25,6 +25,7 @@
 .base {
     padding: 6px 0px;
     font-weight: normal;
+    font-size: 11px;
 }
 .base::first-letter {
     text-transform: uppercase;
